# perpetual

./: .Rbuildignore  .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  DESCRIPTION  LICENSE  Makefile  README.md  _pkgdown.yml  api.html  architecture.html  calibration.html  clippy_errors.txt  clippy_final.txt  clippy_final_v2.txt  clippy_final_v3.txt  clippy_final_v4.txt  clippy_final_v7.txt  clippy_iris.txt  clippy_last.txt  clippy_last_v5.txt  clippy_last_v6.txt  clippy_output.txt  clippy_raw.txt  clippy_short.txt  clippy_v2.txt  continual_learning.html  cran-comments.md  drift_detection.html  explainability.html  faq.html  genindex.html  index.html  installation.html  model_io_export.html  objects.inv  out3.txt  (+8 more)
R/: api.R
package-python/: .gitignore  Cargo.toml  README.md  build_log.txt  build_log_utf8.txt  mkdocs.yml  pyproject.toml
package-python/docs/source/: api.rst  architecture.rst  calibration.rst  conf.py  continual_learning.rst  drift_detection.rst  explainability.rst  faq.rst  index.rst  installation.rst  model_io_export.rst  parameters_tuning.rst  quickstart.rst
package-python/docs/source/_static/: custom.css
package-python/docs/source/causal_ml/: dml.rst  index.rst  iv.rst  policy.rst  risk.rst  uplift.rst
package-python/docs/source/tutorials/: benchmark.ipynb  categorical_data.ipynb  custom_objective.ipynb  index.rst  sklearn_interface.ipynb  toy_datasets.ipynb
package-python/docs/source/tutorials/calibration/: regression_calibration.ipynb
package-python/docs/source/tutorials/causal/: dml_wage_gap.ipynb  fair_classification.ipynb  heterogeneous_treatment_effects.ipynb  iv_causal_effect.ipynb  policy_learning.ipynb  risk_compliance.ipynb
package-python/docs/source/tutorials/verticals/: uplift_marketing.ipynb
package-python/docs/source/verticals/: index.rst  iv.rst  risk.rst  uplift.rst
package-python/examples/: benchmark_air_passengers.py  benchmark_comparison.py  benchmark_lgbm.py  benchmark_perpetual.py  benchmark_wind_onshore.py  cal_housing_calibration.py  categorical_data.ipynb  categorical_data_diamonds.ipynb  categorical_data_titanic.ipynb  continual_learning.py  explainability.py  fetch_openml.ipynb  lgbm_openml_sensory.ipynb  model_io_export.py  openml.ipynb  openml_mnist.ipynb  performance_benchmark.ipynb  santander.ipynb  toy_datasets.ipynb
package-python/examples/advanced/: business_objective.ipynb  cal_housing_calibration.ipynb  drift.py  lead_scoring.ipynb  lead_scoring_v2.ipynb  pd_calibration.ipynb
package-python/examples/causal/: iv_price_elasticity.py  risk_loan_approval.py  uplift_hillstrom.py
package-python/examples/ee/: VN2 - Webinar_ The Winners Explain Their Solutions.ics  business_objective.ipynb  lead_scoring.ipynb  lead_scoring_v2.ipynb  pd_calibration.ipynb  test_v2.csv  train_v2.csv
package-python/python/perpetual/: __init__.py  booster.py  causal_metrics.py  data.py  dml.py  fairness.py  iv.py  meta_learners.py  policy.py  risk.py  serialize.py  sklearn.py  types.py  uplift.py  utils.py
package-python/src/: booster.rs  custom_objective.rs  fairness.rs  iv.rs  lib.rs  metalearners.rs  multi_output.rs  policy.rs  uplift.rs  utils.rs
package-python/tests/: test_backward_compatibility.py  test_booster.py  test_calibration_methods.py  test_causal_additional.py  test_causal_interaction_constraints.py  test_causal_metrics.py  test_coverage_final.py  test_dml_policy.py  test_iv.py  test_meta_learners.py  test_multi_output.py  test_save_load.py  test_serialize.py  test_sklearn.py  test_sklearn_custom_objective.py  test_uplift.py  test_xgboost_onnx.py  test_zero_copy.py
package-python/tests/causal/: test_causal_additional.py  test_causal_interaction_constraints.py  test_dml.py  test_iv.py  test_meta_learners.py
package-python/tests/core/: test_backward_compatibility.py  test_booster.py  test_booster_validation.py  test_interaction_constraints.py  test_multi_output.py  test_objectives.py  test_tabarena.py  test_utils.py
package-python/tests/io/: test_exports.py  test_save_load.py  test_serialize.py  test_xgboost_onnx.py
package-python/tests/metrics/: test_calibration_methods.py  test_drift.py  test_risk.py
package-python/tests/sklearn/: test_sklearn.py  test_sklearn_custom_objective.py
package-r/src/rust/: Cargo.toml  build_output.txt  build_output_2.txt  cargo_check_output.txt  rust-toolchain.toml
package-r/src/rust/src/: lib.rs
python-package/: Cargo.toml  mkdocs.yml  pyproject.toml
python-package/docs/: index.md
python-package/examples/: benchmark_lgbm.py  benchmark_perpetual.py  categorical_data.ipynb  categorical_data_diamonds.ipynb  categorical_data_titanic.ipynb  fetch_openml.ipynb  initial_training_comparison.ipynb  openml.ipynb  openml_cnae.ipynb  openml_mnist.ipynb  performance_benchmark.ipynb  santander.ipynb  toy_datasets.ipynb
python-package/python/perpetual/: __init__.py  booster.py  data.py  serialize.py  sklearn.py  types.py  utils.py
python-package/src/: booster.rs  lib.rs  multi_output.rs  utils.rs
python-package/tests/: test_booster.py  test_multi_output.py  test_save_load.py  test_serialize.py  test_sklearn.py
src/rust/core/: Cargo.toml
src/rust/core/src/: bin.rs  binning.rs  constants.rs  constraints.rs  data.rs  errors.rs  histogram.rs  lib.rs  node.rs  partial_dependence.rs  sampler.rs  shapley.rs  splitter.rs  utils.rs
src/rust/core/src/booster/: config.rs  multi_output.rs  predict.rs  setters.rs
src/rust/core/src/calibration/: cqr.rs  mod.rs  regression.rs  tests.rs
src/rust/core/src/causal/: dml.rs  fairness.rs  iv.rs  metalearners.rs  mod.rs  objective.rs  policy.rs  tests.rs  uplift.rs
src/rust/core/src/decision_tree/: predict.rs  tree.rs
src/rust/core/src/drift/: calculation.rs  mod.rs  stats.rs
src/rust/core/src/metrics/: evaluation.rs
src/rust/core/src/metrics/classification/: metrics.rs
src/rust/core/src/objective/: hinge_loss.rs  huber_loss.rs  listnet_loss.rs  log_loss.rs  squared_loss.rs  tweedie.rs
src/rust/core/src/objective_functions/: adaptive_huber_loss.rs  huber_loss.rs  mod.rs  objective.rs
(+378 files in other folders)
