[package]
name = "perpetual"
version = "0.10.0"
edition = "2021"
authors = ["Mutlu Simsek <msimsek@perpetual-ml.com>", "Serkan Korkmaz <serkor1@duck.com>", "Pieter Pel <pelpieter@gmail.com>"]
homepage = "https://perpetual-ml.com"
description = "A self-generalizing gradient boosting machine that doesn't need hyperparameter optimization"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/perpetual-ml/perpetual"

keywords = ["machine-learning", "perpetual", "ai", "ml"]
categories = ["algorithms", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = 'fat'
codegen-units = 1
#debug = true      # due to flamegraph
#strip = false     # due to flamegraph

[dependencies]
rayon = "1.11.0"
thiserror = "2.0.16"
serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
serde = { version = "1.0.227", features = ["derive"] }
approx = "0.5.1"
log = "0.4.28"
rand = "0.9.2"
sysinfo = "0.37.0"

[dev-dependencies]
criterion = "0.7.0"
polars = "0.41"
reqwest = { version = "0.12.23", features = ["blocking"] }
csv = "1.3.1"
chrono = "0.4.42"
