[package]
name = "py-perpetual"
version = "1.0.30"
edition = "2021"
authors = ["Mutlu Simsek <msimsek@perpetual-ml.com>", "Serkan Korkmaz <serkor1@duck.com>", "Pieter Pel <pelpieter@gmail.com>"]
homepage = "https://perpetual-ml.com"
description = "A self-generalizing gradient boosting machine that doesn't need hyperparameter optimization"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/perpetual-ml/perpetual"

keywords = ["machine-learning", "perpetual", "ai", "ml"]
categories = ["algorithms", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "perpetual"
crate-type = ["cdylib", "rlib"]

[dependencies]
perpetual_rs = {package="perpetual", version = "1.0.30", path = "../" }
pyo3 = { version = "0.27.2", features = ["extension-module"] }
numpy = "0.27.1"
ndarray = "0.17.2"
serde_plain = { version = "1.0.2" }
serde = { version = "1.0.228" }
pyo3-log = "0.13.2"
