[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "perpetual"
version = "1.0.35"
description = "A self-generalizing gradient boosting machine that doesn't need hyperparameter optimization"
readme = "README_PYTHON.md"
keywords = [
  "rust",
  "perpetual",
  "machine learning",
  "tree model",
  "decision tree",
  "gradient boosted decision tree",
  "gradient boosting machine"
]
authors = [
  { name = "Mutlu Simsek", email = "mutlusims3k@gmail.com" },
  { name = "Serkan Korkmaz", email = "serkor1@duck.com" },
  { name = "Pieter Pel", email = "pelpieter@gmail.com" },
]
dependencies = ["numpy", "typing-extensions"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = ["pandas", "polars", "pyarrow", "maturin", "pytest", "seaborn", "scikit-learn", "mkdocs-material", "mkdocstrings[python]", "mkdocs-autorefs", "ruff", "xgboost", "onnxmltools", "onnx", "onnxruntime; python_version < '3.14'"]

[tool.maturin]
python-source = "python"
module-name = "perpetual.perpetual"

[dependency-groups]
dev = [
    "maturin>=1.11.5",
    "polars>=1.37.1",
    "pytest>=9.0.2",
]


