[package]
name = "py-perpetual"
version = "0.9.1"
edition = "2021"
authors = ["Mutlu Simsek <msimsek@perpetual-ml.com>"]
homepage = "https://perpetual-ml.com"
description = "A self-generalizing gradient boosting machine that doesn't need hyperparameter optimization"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/perpetual-ml/perpetual"

keywords = ["machine-learning", "perpetual", "ai", "ml"]
categories = ["algorithms", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "perpetual"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"] }
perpetual_rs = {package="perpetual", version = "0.9.1", path = "../" }
numpy = "0.23.0"
ndarray = "0.16.1"
serde_plain = { version = "1.0.2" }
serde = { version = "1.0.219" }
pyo3-log = "0.12.1"
