[build-system]
requires = ["maturin>=1.0.0,<2.0.0"]
build-backend = "maturin"

[project]
name = "perpetual"
version = "0.4.4"
description = "A self-generalizing gradient boosting machine which doesn't need hyperparameter optimization"
license = { file = "LICENSE" }
keywords = [
  "rust",
  "perpetual",
  "machine learning",
  "tree model",
  "decision tree",
  "gradient boosted decision tree",
  "gradient boosting machine"
]
authors = [{ name = "Mutlu Simsek" }]
readme = "README.md"
dependencies = ["numpy"]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pandas", "polars", "pyarrow", "maturin", "pytest", "seaborn", "scikit-learn", "mkdocs-material==9.*", "mkdocstrings[python]==0.26.1", "mkdocs-autorefs", "ruff>=0.0.272", "typing-extensions", "ucimlrepo"]

[tool.maturin]
sdist-include = ["LICENSE", "README.md"]
python-source = "python"
module-name = "perpetual.perpetual"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.isort]
profile = "black"
