[build-system]
requires = ["maturin>=1.0,<1.7"]
build-backend = "maturin"

[project]
name = "perpetual"
version = "0.7.11"
description = "A self-generalizing gradient boosting machine which doesn't need hyperparameter optimization"
license = { file = "LICENSE" }
keywords = [
  "rust",
  "perpetual",
  "machine learning",
  "tree model",
  "decision tree",
  "gradient boosted decision tree",
  "gradient boosting machine"
]
authors = [{ name = "Mutlu Simsek" }]
readme = "README.md"
dependencies = ["numpy", "typing-extensions"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pandas", "polars", "pyarrow", "maturin==1.6.0", "pytest", "seaborn", "scikit-learn", "mkdocs-material", "mkdocstrings[python]", "mkdocs-autorefs", "ruff"]

[tool.maturin]
sdist-include = ["LICENSE", "README.md"]
python-source = "python"
module-name = "perpetual.perpetual"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.isort]
profile = "black"
