[workspace]
# This empty workspace section ensures that this manifest is treated as its own workspace root.

[package]
name = "perpetual_r"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
perpetual_rs = { path = "core", package = "perpetual" }
serde = "1.0.228"
serde_json = "1.0.149"
serde_plain = "1.0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "unwind"
